--- a/src/templates/departments.html
+++ b/src/templates/departments.html
@@ -12,12 +12,12 @@
                 </button>
             </h6>
             <br>
-            {% with messages = get_flashed_messages() %}
+            {% with messages = get_flashed_messages(with_categories=True) %}
             {% if messages %}
-            {% for message in messages %}
+            {% for category, message in messages %}
             <br>
             <br>
-            <div class="alert alert-success alert-dismissible fade show" role="alert">
+            <div class="alert alert-{{category}} alert-dismissible fade show" role="alert">
                 <button type="button" class="btn-close" data-bs-dismiss="alert">
                     <span aria-hidden="true"></span>
                 </button>
@@ -47,7 +47,7 @@
                     </td>
                 </tr>
 
-                <!-- Modal Edit Employee-->
+                <!-- Modal Edit Department-->
                 <div id="modaledit{{row.id}}" class="modal fade" role="dialog">
                     <div class="modal-dialog">
                         <div class="modal-content">
@@ -81,7 +81,7 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="modal-title">Add Employee</h4>
+                        <h4 class="modal-title">Add Department</h4>
                     </div>
                     <div class="modal-body">
                         <form action="{{url_for('department_insert')}}" method="POST">
