--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -25,10 +25,10 @@
 
             </h6>
 
-            {% with messages = get_flashed_messages() %}
+            {% with messages = get_flashed_messages(with_categories=True) %}
                  {% if messages %}
-                 {% for message in messages %}
-                 <div class="alert alert-success alert-dismissible fade show" role="alert">
+                 {% for category, message in messages %}
+                 <div class="alert alert-{{category}} alert-dismissible fade show" role="alert">
                      <button type="button" class="btn-close" data-bs-dismiss="alert">
                          <span aria-hidden="true"></span>
                      </button>
